Version 7.21 - 21 March 2013, by Thierry Vignaud

- library:
  o restore main_window when global progress bar dialog is deleted

Version 7.20 - 19 March 2013, by Thierry Vignaud

- library:
  o drop 'callback_report_uninst' now that 'callback_uninst' enables to get
    erasure progress
  o enable rpmdrake/gurpm/drakx to pass their own callbacks for erasure
    progress & errors
  o enhanced doc
  o revert 'fixing (g)urpmi --auto-select --update defaulting to all media when
    there're no update media (#1024)' as it break looking for deps in other media
    with --update (mga#2317)
- gurpmi:
  o split global progress bar widget for rpmdrake (mga#778)
  o show removed packages in progress too
  o support exceptions in callback in main wrapper too
  o support other distros which do not handle exceptions in gtk+ callbacks
  o use new exception management

Version 7.19 - 9 February 2013, by Thierry Vignaud

- add basic support for --downgrade (mga#6655)

Version 7.18 - 9 February 2013, by Thierry Vignaud

- keep a separate counter for erasures

Version 7.17 - 5 February 2013, by Thierry Vignaud

- fix counting for erasures
- restore quiet behavior for erasures when not in verbose mode

Version 7.16 - 3 February 2013, by Thierry Vignaud

- add basic support for detecting I/O error
- display erasure progress too

Version 7.15.2 - 16 January 2013, by Thierry Vignaud

- update translations

Version 7.15.1 - 18 December 2012, by Thierry Vignaud

- library:
  o fix retrieving rpm version with stable rpm

Version 7.15 - 17 December 2012, by Thierry Vignaud

- library:
  o do not show empty information from README* with --justdb
  o fix retrieving rpm version with beta versions

Version 7.14 - 13 December 2012, by Thierry Vignaud

- library:
  o associate media_cfg data to media when adding them

Version 7.13 - 4 December 2012, by Thierry Vignaud

- library speedups when looking up packages:
  o do not attempt fuzzy matching if not requested
- urpmq: