@@ -1,3 +1,8 @@
+- library:
+  o enable to have a cancel button in global progress bar dialog
+- gurpmi2:
+  o fix setting download callback
+
 Version 7.21 - 21 March 2013, by Thierry Vignaud
 
 - library:
